--- a/src/main/resources/templates/record/index.html
+++ b/src/main/resources/templates/record/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Plane balancing</title>
+    <title>List records</title>
+    <style>.hidden {display: none;}</style>
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/tables.css"/>
+    <style>.edit-row {display: none;}</style>
+    <script src="/js/toggle.js"></script>
+    <script src="/js/editrecordrow.js"></script>
 </head>
+
 <body>
 <div class="container">
     <div class="box">
         <table class="greeting">
             <tr>
                 <td>
-                    <h1 th:text="'Hello, '+${username}">hh, </h1>
+                    <span class="inside" th:text="'Hello, '+${username}"></span>
                 </td>
                 <td>
                     <form th:action="@{/logout}" method="post">
@@ -23,47 +28,80 @@
     </div>
 
     <div class="box">
-        <h1>How to use single plane balancing application</h1>
-        <ul>Fill in the fields in the table:
-            <li>Mode is type of generator/motor load.</li>
-            <li>Magnitude and phase of vibration is a value and a phase of
-                vibration from peak to peak.
+        <a href="#" onclick="toggleElement()">
+            <span class="inside">To utilize the single plane balancing
+                application, follow these steps</span>
+        </a>
+        <ul id="listToToggle" class="hidden">
+            Fill in the fields within the table as follows:
+            <li><b>Mode</b>: Specify the type of generator/motor load.</li>
+            <li><b>Magnitude and Phase of Vibration</b>: Enter the amplitude
+                and phase of vibration, measured from peak to peak.
             </li>
-            <li>Magnitude and phase of weight is a value and a phase of
-                weight installed on the shaft.
+            <li><b>Magnitude and Phase of Weight</b>: Provide the magnitude
+                and phase of the weight installed on the shaft
             </li>
-            <li>The reference number is a measurement number as a
-                reference to the previous state of the machine.
+            <li><b>Reference Number</b>: Assign a measurement number for reference
+                to the machine's previous state.
             </li>
-            <li>The state is an true/false switch. It is used to take into
-                account in the averaging of values when calculating the total load.
+            <li><b>State</b>: Utilize a true/false switch. This is employed to determine
+                whether to include the data in the averaging process when calculating
+                the total load.
             </li>
         </ul>
+        <span class="inside">
+            <b>Station name</b>
+            <span th:text="': '+${unit.station}+';&nbsp;'"></span>
+            <b>&nbsp;unit number</b>
+            <span th:text="': '+${unit.unitnumber}+';&nbsp;'"></span>
+            <b>&nbsp;type</b>
+            <span th:text="': '+${unit.type}+'&nbsp;'"></span>
+            <a href="/unit">Go to unit list</a>
+        </span>
     </div>
 
     <div class="box">
-        <table class="bordered" th:switch="${records}">
-            <h2 th:case="null">No records yet.</h2>
+        <table class="bordered" th:switch="${units}">
+            <!--            <h2 th:case="null">No records yet.</h2>-->
             <thead>
             <tr>
-                <th>No</th>
-                <th>Mode</th>
-                <th>Vibration <br> magnitude</th>
-                <th>Vibration <br> phase</th>
-                <th>Weight <br> magnitude</th>
-                <th>Weight <br> phase</th>
-                <th>Reference</th>
-                <th>State</th>
-                <th>Total weight <br> magnitude</th>
-                <th>Total weight <br> phase</th>
-                <th>Edit</th>
-                <th>Delete</th>
+                <th colspan="9" style="text-align: center">
+                    Real values
+                </th>
+                <th colspan="6" style="text-align: center">
+                    Calculated values
+                </th>
             </tr>
             </thead>
 
-            <tr th:each="record:${records}">
+            <tr>
+                <th rowspan="2">No</th>
+                <th rowspan="2" style="width: 70px">Mode</th>
+                <th rowspan="2" style="width: 50px">Plane</th>
+                <th colspan="2" style="text-align: center">Vibration</th>
+                <th colspan="2" style="text-align: center">Weight</th>
+                <th rowspan="2" style="width: 50px">Ref</th>
+                <th rowspan="2">State</th>
+                <th colspan="2" style="text-align: center">Total weight</th>
+                <th colspan="2" style="text-align: center">Target weight</th>
+                <th rowspan="2" colspan="2">Control</th>
+            </tr>
+
+            <tr>
+                <th style="width: 70px">mag</th>
+                <th style="width: 70px">phase</th>
+                <th style="width: 70px">mag</th>
+                <th style="width: 70px">phase</th>
+                <th style="width: 70px">mag</th>
+                <th style="width: 70px">phase</th>
+                <th style="width: 70px">mag</th>
+                <th style="width: 70px">phase</th>
+            </tr>
+            <tbody th:each="record:${unit.records}">
+            <tr>
                 <td th:text=${record.id}></td>
                 <td th:text=${record.mode}></td>
+                <td th:text=${record.plane}></td>
                 <td th:text=${record.magvibration}></td>
                 <td th:text=${record.phasevibration}></td>
                 <td th:text=${record.magweight}></td>
@@ -72,29 +110,76 @@
                 <td th:text=${record.stage}></td>
                 <td th:text=${record.magTotalWeight}></td>
                 <td th:text=${record.phaseTotalWeight}></td>
-                <td class="divTableCell">
-                    <form th:action="@{'/record/edit/'+${record.id}}" th:method="get">
-                        <input type="submit" value="edit"/>
-                    </form>
+                <td th:text=${record.magTargetWeight}></td>
+                <td th:text=${record.phaseTargetWeight}></td>
+                <td>
+                    <button onclick="showEditRow(this); return false;">edit</button>
                 </td>
-                <td class="divTableCell">
-                    <form th:action="@{'/record/delete/'+${record.id}}" th:method="post">
+                <td>
+                    <form th:action="@{'/unit/' + ${unit.id} +
+                '/record/delete/' + ${record.id}}" th:method="post">
                         <input type="submit" value="delete"/>
                     </form>
                 </td>
             </tr>
 
+            <tr class="edit-row">
+                <form th:action="@{'/unit/'+${unit.id}+
+                '/record/update/'+${record.id}}" method="post">
+                    <td>&#10060;</td>
+                    <td><input type="text" name="mode"
+                               th:value="${record.mode}"/></td>
+                    <td><input type="number"
+                               name="plane"
+                               th:value="${record.plane}"/></td>
+                    <td><input class=decimal
+                               type="number"
+                               name="magvibration"
+                               th:value="${record.magvibration}"/></td>
+                    <td><input class="decimal"
+                               type="number"
+                               name="phasevibration"
+                               th:value="${record.phasevibration}"/></td>
+                    <td><input class="decimal"
+                               type="number"
+                               name="magweight"
+                               th:value="${record.magweight}"/></td>
+                    <td><input class="decimal"
+                               type="number"
+                               name="phaseweight"
+                               th:value="${record.phaseweight}"/></td>
+                    <td><input type="number"
+                               name="reference"
+                               th:value="${record.reference}"/></td>
+                    <td><input type="checkbox"
+                               name="stage"
+                               th:checked="${record.stage}"/></td>
+                    <td>
+                        <button type="submit">Save</button>
+                    </td>
+                    <td colspan="5" style="text-align:left">
+                        <button onclick="cancelEdit(this); return false;">
+                            Cancel
+                        </button>
+                    </td>
+                </form>
+            </tr>
+            </tbody>
+
             <tr>
-                <form style="background: #78DBE2" action="/record/create" method="post">
+                <form th:action="@{'/unit/'+${unit.id}+'/record/create'}" method="post">
                     <td>&#10060;</td>
                     <td><input type="text" name="mode"/></td>
+                    <td><input type="number" name="plane"/></td>
                     <td><input type="number" name="magvibration"/></td>
                     <td><input type="number" name="phasevibration"/></td>
                     <td><input type="number" name="magweight"/></td>
                     <td><input type="number" name="phaseweight"/></td>
                     <td><input type="number" name="reference"/></td>
                     <td><input type="checkbox" name="stage"/></td>
-                    <td><input type="submit" value="Add record"/></td>
+                    <td colspan="6" style="text-align: left">
+                        <input type="submit" value="Add record"/>
+                    </td>
                 </form>
             </tr>
 
